# postgres-benchmarks

./: .gitignore  README.md
is-postgres-on-s3-faster-than-nvme/: .gitignore  Makefile  README.md  shell.nix
is-postgres-on-s3-faster-than-nvme/analysis/: README.md  pyproject.toml
is-postgres-on-s3-faster-than-nvme/analysis/src/pg_bench_s3_nvme/: __init__.py  blog_plots.py  compare_scenarios.py  pgbench_log.py  pgbench_log_to_hdr.py  plot_latency_pct.py  plot_tps.py
is-postgres-on-s3-faster-than-nvme/ansible/: ansible.cfg  bake.yml  inventory.py  requirements.yml  site.yml
is-postgres-on-s3-faster-than-nvme/ansible/group_vars/: all.yml
is-postgres-on-s3-faster-than-nvme/benchmark/: pg_tune.md  run.sh
is-postgres-on-s3-faster-than-nvme/benchmark/workloads/: init_mixed.sql  mixed_75_5_20.sql
is-postgres-on-s3-faster-than-nvme/docs/: design.md
is-postgres-on-s3-faster-than-nvme/scripts/: _lib.sh  analysis-down.sh  analysis-on-box.sh  analysis-run.sh  analysis-shell.sh  analysis-up.sh  bench-bake.sh  bench-bootstrap.sh  bench-campaign.sh  bench-destroy.sh  bench-down.sh  bench-fetch.sh  bench-run.sh  bench-status.sh  bench-up.sh  campaign-blog.sh  campaign-s3.sh  cluster-smoke.sh
is-postgres-on-s3-faster-than-nvme/terraform/: .terraform.lock.hcl  budget.tf  ec2.tf  iam.tf  main.tf  network.tf  outputs.tf  results-bucket.tf  s3.tf  security.tf  variables.tf
is-postgres-on-s3-faster-than-nvme/terraform/analysis/: ec2.tf  iam.tf  main.tf  network.tf  outputs.tf  security.tf  variables.tf
is-postgres-on-s3-faster-than-nvme/terraform/persistent/: main.tf  (+1 more)
(+23 files in other folders)
