[project]
name = "pg-bench-s3-nvme-analysis"
version = "0.1.0"
description = "Analysis tooling for the Postgres-on-S3-vs-NVMe benchmark."
requires-python = ">=3.11"
dependencies = [
    "hdrhistogram>=0.10",
    "pandas>=2.2",
    "matplotlib>=3.9",
    "numpy>=1.26",
]

[project.scripts]
pgbench-log-to-hdr  = "pg_bench_s3_nvme.pgbench_log_to_hdr:main"
plot-tps            = "pg_bench_s3_nvme.plot_tps:main"
plot-latency-pct    = "pg_bench_s3_nvme.plot_latency_pct:main"
compare-scenarios   = "pg_bench_s3_nvme.compare_scenarios:main"
blog-plots          = "pg_bench_s3_nvme.blog_plots:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pg_bench_s3_nvme"]
